--- a/index.html
+++ b/index.html
@@ -36,6 +36,48 @@
         </ul>
     </aside>
 
+    <!-- weather area -->
+    <div class="card weatherBox">
+        <div class="card-body">
+          <h4>Austin, TX</h4>
+          <p1>Tempreature: </p1>
+          <p1>Humidity: </p1>
+          <p1>Wind Speed: </p1>
+          <p1>UV Index: </p1>
+        </div>
+    </div>
+
+    <div>
+        <h4>5-day forecast:</h4>
+        <div class="row forecast">
+            <div class="card day">
+                <div class="card-body">
+                    DAY 1
+                </div>
+            </div>
+            <div class="card day">
+                <div class="card-body">
+                    DAY 2
+                </div>
+            </div>
+            <div class="card day">
+                <div class="card-body">
+                    DAY 3
+                </div>
+            </div>
+            <div class="card day">
+                <div class="card-body">
+                    DAY 4
+                </div>
+            </div>
+            <div class="card day">
+                <div class="card-body">
+                    DAY 5
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootsrap js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
