--- a/index.html
+++ b/index.html
@@ -31,19 +31,17 @@
         </div>
         <!-- search history -->
         <ul class="list-group history">
-            <li class="list-group-item hItem">Austin</li>
-            <li class="list-group-item hItem">Chicago</li>
         </ul>
     </aside>
 
     <!-- weather area -->
     <div class="card weatherBox">
         <div class="card-body">
-          <h4>Austin, TX</h4>
-          <p1>Tempreature: </p1>
-          <p1>Humidity: </p1>
-          <p1>Wind Speed: </p1>
-          <p1>UV Index: </p1>
+          <h3 class="place"></h3>
+          <p1 class="temperature">Temperature: </p1>
+          <p1 class="humidity">Humidity: </p1>
+          <p1 class="wind">Wind Speed: </p1>
+          <p1 class="index">UV Index: </p1>
         </div>
     </div>
 
@@ -78,9 +76,6 @@
         </div>
     </div>
 
-    <!-- Bootsrap js -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- Link to external script -->
     <script src="weatherScript.js"></script>
 </body>
