working history section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 
+    <!-- 5-day forecast area -->
     <div>
         <h4>5-day forecast:</h4>
         <div class="row forecast">
