added color to UV index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p1 class="temperature">Temperature: </p1>
           <p1 class="humidity">Humidity: </p1>
           <p1 class="wind">Wind Speed: </p1>
-          <p1 class="index">UV Index: </p1>
+          <p1 class="uvIndex">UV Index: <span id="index"></span></p1>
         </div>
     </div>
 
@@ -49,28 +49,28 @@
     <div>
         <h4>5-day forecast:</h4>
         <div class="row forecast">
-            <div class="card day">
-                <div class="card-body">
+            <div class="card">
+                <div class="card-body day 1">
                     DAY 1
                 </div>
             </div>
-            <div class="card day">
-                <div class="card-body">
+            <div class="card">
+                <div class="card-body day 2">
                     DAY 2
                 </div>
             </div>
-            <div class="card day">
-                <div class="card-body">
+            <div class="card">
+                <div class="card-body day 3">
                     DAY 3
                 </div>
             </div>
-            <div class="card day">
-                <div class="card-body">
+            <div class="card">
+                <div class="card-body day 4">
                     DAY 4
                 </div>
             </div>
-            <div class="card day">
-                <div class="card-body">
+            <div class="card">
+                <div class="card-body day 5">
                     DAY 5
                 </div>
             </div>
